--- a/templates/components/note.html
+++ b/templates/components/note.html
@@ -1,4 +1,11 @@
-<li>
-    <h3>{title}</h3>
-    <p>{details}</p>
-</li>
+<div class="card">
+    <h3 class="card-title">
+        {title}
+        <img src="img\lixeira-de-reciclagem.png" class="extras" >
+        <img src="img\ferramenta-lapis.png" class="extras" >
+    </h3>
+    
+    <div class="card-content">
+      <p>{details}</p>
+    </div>
+  </div>
