--- a/templates/getit.css
+++ b/templates/getit.css
@@ -46,6 +46,12 @@ body {
     height: auto;
 }
 
+.extras {
+    margin: 5px; 
+    width: 25px;
+    height: 20px;
+}
+
 .subtitle {
     margin: 10px;
 }
